ws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-deployment
  labels:
    app: ws
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ws
  template:
    metadata:
      labels:
        app: ws
    spec:
      containers:
        - name: ws
          image: ghcr.io/mikedevresse/websocket-scale-ws:main
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ws-service
spec:
  type: NodePort
  selector:
    app: ws
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30200
